# CharacterController

./: .gitignore  CMakeLists.txt  README.md
Animation/: CMakeLists.txt
Animation/private/: Animation.cpp  Animator.cpp
Animation/public/: Animator.h
App/: CMakeLists.txt
App/private/: App.cpp  AppEntryObj.cpp  AppEntryTypeDef.cpp  AppObj.cpp  AppTypeDef.cpp
App/public/: App.h  AppEntryObj.h  AppEntryTypeDef.h  AppObj.h  AppTypeDef.h
AssetManager/: CMakeLists.txt
AssetManager/private/: AssetManager.cpp
AssetManager/public/: AssetManager.h
CSharp/QuickGUIDGenerator/: QuickGUIDGenerator.sln
CommonTypeDefs/: CMakeLists.txt
CommonTypeDefs/private/: AppEntryObj.cpp  AppEntryTypeDef.cpp  CommonTypeDefs.cpp  MathStructs.cpp
CommonTypeDefs/public/: AppEntry.h  AppEntryObj.h  AppEntryTypeDef.h  CommonTypeDefs.h  MathStructs.h
Data/: json_grammar.txt  test_json.json
Data/Assets/: 00a1fb78-e105-4c59-850a-c34476198b1a.json  00f68614-fc6c-4be2-8867-4fb9cd07704a.json  0f504d6e-1a4f-4048-8a96-9eb17a57a4e0.json  10b3825b-5bf5-4acf-ba7e-abe0b3d6e66b.json  1477f5da-9c7f-4da5-bb3f-f2dd3850e38b.json  149bf5a0-2a7c-4864-88d2-009e22b8db73.json  16d4cd6f-ef7e-4e92-9dda-eaed6783fbe9.json  1d408e62-32fa-4584-9c91-6ce4e27a1a4c.json  1d75dddf-e81a-48c6-8687-e88ec78851e9.json  1fe85ed3-2578-4e6d-bb54-e572d12721ae.json  216d60c1-ed81-4c61-8248-f7a525c6dfeb.json  24ca7998-79b1-4820-9eaf-68c861c0c5a4.json  269f8418-5bb2-4727-aac4-792ffce989a6.json  27b7ee9b-5963-45f7-82f7-b30b815c06bf.json  2db6091c-3973-4d55-83bb-38fd554d8eb7.json  32dafaf9-fa37-4ee9-8d53-77f79eda282b.json  406b1d78-15a3-4ed1-8bf9-e9d722e9254f.json  42768172-c9c2-4933-8425-e21e62e2935e.json  44a25771-5429-44bd-ae5c-e68fefaa47bd.json  454e11a0-7afb-4a13-81a2-d53e7cea4b4a.json  4f633e79-591f-4e39-b997-c10df7372c48.json  546f8823-dc65-4ac0-bbc3-8832438a831d.json  565917d9-0d8e-480a-a3d5-b5ac77c2673e.json  59797d84-40ef-4e9f-86ab-93314dc5f139.json  (+47 more)
Files/: CMakeLists.txt
Files/private/: Files.cpp  Hash.cpp  MemoryFile.cpp
Files/public/: Files.h  Hash.h  MemoryFile.h
GC/: CMakeLists.txt
GC/private/: GC.cpp  (+2 more)
GCWorker/: CMakeLists.txt
GCWorker/private/: GCWorker.cpp
GCWorker/public/: GCWorker.h
Game/: CMakeLists.txt
Geometry/: CMakeLists.txt
Geometry/private/: Animation.cpp  Geometry.cpp  GeometryAppEntry.cpp  Mesh.cpp  Skeleton.cpp
Geometry/public/: Animation.h  Geometry.h  GeometryAppEntry.h  Mesh.h  Skeleton.h
JS/: index.html  init.js  package-lock.json  package.json
JSONParser/: CMakeLists.txt
Jobs/: CMakeLists.txt
Jobs/private/: Job.cpp  JobSystem.cpp  JobSystemDef.cpp  Jobs.cpp  MultiLoader.cpp  Thread.cpp  Thread.h
Jobs/public/: Channel.h  Job.h  JobSystem.h  JobSystemDef.h  Jobs.h  MultiLoader.h
Main/: CMakeLists.txt  TestObject.cpp  TestObject.h  TestTypeDef.cpp  TestTypeDef.h  main.cpp
Materials/: CMakeLists.txt
Materials/private/: Material.cpp  Materials.cpp  VertexLayouts.cpp
Materials/public/: Material.h  Materials.h  VertexLayouts.h
Math/: CMakeLists.txt
Math/private/: Math.cpp  MathUtils.cpp
Math/public/: MathUtils.h
Parser/: CMakeLists.txt
Reflection/: CMakeLists.txt
Reflection/private/: Reflection.cpp  ReflectionEntryObj.cpp  ReflectionEntryTypeDef.cpp
Reflection/public/: Reflection.h  ReflectionEntryObj.h  ReflectionEntryTypeDef.h
RenderPass/: CMakeLists.txt
RenderPass/private/: CameraBuffer.cpp  ClearScreenRP.cpp  ClearScreenRP.h  DisplayTextureMaterial.cpp  Material.cpp  RenderPass.cpp
RenderPass/public/: CameraBuffer.h  DisplayTextureMaterial.h  Material.h  RenderPass.h
Renderer/: CMakeLists.txt
Renderer/private/: Camera.cpp  Renderer.cpp  RendererAppEntry.cpp  RendererAppEntry.h  TickUpdater.cpp
Renderer/public/: Camera.h  Renderer.h  TickUpdater.h
RenderingCore/: CMakeLists.txt
RenderingCore/private/: CoreUtils.cpp  DXBuffer.cpp  DXCommandQueue.cpp  DXCopyBuffers.cpp  DXCopyCommandQueue.cpp  DXDepthStencilTexture.cpp  DXDescriptorHeap.cpp  DXDevice.cpp  DXFence.cpp  DXHeap.cpp  DXMutableBuffer.cpp  DXShader.cpp  DXSwapChain.cpp  DXTexture.cpp  ImageTex.cpp  ImageTex.h  RenderFence.cpp  RenderWindow.cpp  RenderingCore.cpp  RenderingEntryObj.cpp  RenderingEntryTypeDef.cpp  ResidentHeapFence.cpp  ResidentHeapFence.h  ResidentHeapJobSystem.cpp  ResidentHeapJobSystem.h  WindowObj.cpp  WindowTypeDef.cpp
RenderingCore/public/: CoreUtils.h  DXBuffer.h  DXCommandQueue.h  DXCopyBuffers.h  DXCopyCommandQueue.h  DXDepthStencilTexture.h  DXDescriptorHeap.h  DXDevice.h  DXFence.h  DXHeap.h  DXMutableBuffer.h  DXShader.h  DXSwapChain.h  DXTexture.h  RenderFence.h  RenderWindow.h  RenderingCore.h  RenderingEntryObj.h  RenderingEntryTypeDef.h  WindowObj.h  WindowTypeDef.h
Runtime/: CMakeLists.txt
Runtime/private/: Actor.cpp  Animator.cpp  Input.cpp  MeshActor.cpp  MeshBuffers.cpp  PlayerController.cpp  PoseSampler.cpp  Runtime.cpp  TickUpdater.cpp
Runtime/public/: Actor.h  Animator.h  Input.h  MeshActor.h  MeshBuffers.h  PlayerController.h  PoseSampler.h  Runtime.h  TickUpdater.h
Scene/: CMakeLists.txt
Scene/private/: Actor.cpp  MeshBuffers.cpp  Scene.cpp  SceneActor.cpp  SceneObject.cpp
Scene/public/: Actor.h  MeshBuffers.h  Scene.h  SceneActor.h  SceneObject.h
Settings/: CMakeLists.txt
Settings/private/: Settings.cpp
Settings/public/: Settings.h
Types/: CMakeLists.txt
Types/private/: AssetTypeDef.cpp  CompositeTypeDef.cpp  CompositeValue.cpp  GenericListDef.cpp  GenericListTypeDef.cpp  ListDef.cpp  ListTypeDef.cpp  Object.cpp  ObjectValueContainer.cpp  PrimitiveTypes.cpp  TypeDef.cpp  Types.cpp  Value.cpp  ValueList.cpp
Types/public/: AssetTypeDef.h  CompositeTypeDef.h  CompositeValue.h  GenericList.h  GenericListDef.h  GenericListTypeDef.h  ListDef.h  ListTypeDef.h  Object.h  ObjectValueContainer.h  PrimitiveTypes.h  StructValue.h  TypeDef.h  Types.h  Value.h  ValueList.h
UnlitRP/: CMakeLists.txt
UnlitRP/private/: UnlitMaterial.cpp  UnlitRP.cpp  UnlitRenderTexture.cpp  UnlitRenderTextureTexture.cpp
UnlitRP/public/: UnlitMaterial.h  UnlitRP.h  UnlitRenderTexture.h  UnlitRenderTextureTexture.h
XMLReader/: CMakeLists.txt
(+142 files in other folders)
